# honours

./: .gitignore  CMakeLists.txt  Makefile  analysis.ipynb  compare.py  evaluation.py  meson.build
dataset/chesapeake/: edges.txt
evaluation/: output-fb.json  output-realworld-120s.json  output-v2-vs-exact.json  output-v3-vs-exact.json  output.bak.json  quasi-naive.json  quasi.json
src/: heap.hpp  main.cpp  pch.hpp  util.hpp
src/graph/: convert.hpp  graph.cpp  graph.hpp  graphv2.cpp  graphv2.hpp  kdefective.cpp  kdefective.hpp  kplex.cpp  kplex.hpp  pseudoclique.cpp  pseudoclique.hpp  quasiclique.cpp  quasiclique.hpp  types.hpp
